# EtuUTT-Discord-Bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  bot.py  commands_list.py  docker-compose.yaml  index.html  main.py  mkdocs.yaml  objects.inv  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  web.py
.github/: dependabot.yaml  renovate.json
.github/workflows/: ci.yaml  ci.yml  docker.yaml  docs.yaml
commands/: misc.py  role.py  ue.py
data/: discord.example.toml  discord.toml.example
docs/: index.md
docs/explanation/: conventions.md  etu-auth.md  index.md  technos.md
docs/reference/commands/: admin.md  misc.md  role.md  ue.md
docs/reference/services/: channel.md  role.md  ue.md  user.md
docs/reference/web/: routes.md
docs/tutorials/: doc.md  install.md
etuutt_bot/: __main__.py  bot.py  commands_list.py  config.py  main.py  types.py  web.py
etuutt_bot/commands/: admin.py  anon_msg.py  config.py  misc.py  role.py  sync.py  ue.py
etuutt_bot/routes/: home.py  login.py  role.py
etuutt_bot/services/: channel.py  role.py  sync.py  ue.py  user.py
etuutt_bot/utils/: assign_roles.py  channels.py  data_write.py  message.py  role.py
explanation/: index.html
explanation/conventions/: index.html
explanation/etu-auth/: index.html
explanation/technos/: index.html
howto/: index.html
public/: site.webmanifest
public/scripts/: script.js
public/styles/: style.css
public_html/: connexion.html
reference/commands/admin/: index.html
reference/commands/misc/: index.html
reference/commands/role/: index.html
reference/commands/ue/: index.html
reference/services/channel/: index.html
reference/services/role/: index.html
reference/services/ue/: index.html
reference/services/user/: index.html
reference/web/routes/: index.html
search/: search_index.json
src/: bot.py  commands_list.py  main.py  web.py
src/commands/: admin.py  misc.py  role.py
templates/: base.html.jinja  error.html.jinja  form.html.jinja  http_error.html.jinja  role.html.jinja
tests/: conftest.py
tests/tests_utils/: test_roles.py
tutorials/doc/: index.html
tutorials/install/: index.html
utils/: role.py
