[project]
name = "EtuUTT-Bot"
version = "0.0.1"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp~=3.14.0",
    "aiohttp-jinja2~=1.6.0",
    "discord.py[speed]~=2.7.1",
    "Jinja2~=3.1.6",
    "pydantic~=2.13.4",
    "pydantic-settings~=2.14.1",
    "sentry-sdk[aiohttp]~=2.62.0",
    "tomlkit~=0.15.0",
]

[dependency-groups]
dev = [
    "pre-commit~=4.2",
    "ruff==0.15.18",
]
docs = [
    "mkdocs-material~=9.7.6",
    "mkdocstrings-python~=2.0.3",
]

[tool.uv]
default-groups = ["dev", "docs"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = [
    "A",
    "ASYNC",
    "B",
    "E",
    "ERA",
    "F",
    "I",
    "INP",
    "N",
    "PERF",
    "RET",
    "RUF",
    "SIM",
    "T20",
    "TC",
    "UP",
]
ignore = ["E501"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
